src/test/deca/context/invalid/OpArithmetique4.deca
// Description:
//    modulo incorrecte
//
// Resultats:
//     Can not operate on int and String
// 
// Historique:
//    cree le 01/01/2022

{
    int a=10;
    float b=10.5;
    String s="hi!";
    b=b/s+a;

}